@@ -4,6 +4,17 @@
 
  Changes between 0.9.5 and 0.9.5a  [XX XXX 2000]
 
+  *) For easily testing in shell scripts whether some command exists,
+     'openssl no-XXX' returns with exit code 0 iff the command XXX is
+     available.  'no-XXX' is printed in this case, 'XXX' otherwise
+     (i.e. when a command of this name exists).  In both cases,
+     the output goes to stdout and nothing is printed to stderr.
+     Additional arguments are always ignored.
+
+     Since for each cipher there is a command of the same name,
+     the 'no-cipher' compilation switches can be tested this way.
+     [Bodo Moeller]
+
   *) Update test suite so that 'make test' succeeds in 'no-rsa' configuration.
      [Bodo Moeller]
 
